--- a/acm.html
+++ b/acm.html
@@ -63,9 +63,9 @@
                     <div id="lab1" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab1/blob/master/acmlab1.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab1/master/acmlab1.cpp', 'acmlab1.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab1/master/acmlab1.cpp', 'acmlab1.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -74,9 +74,9 @@
                     <div id="lab2" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a>
+						                            | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab2/master/acmlab2.cpp', 'acmlab2.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab2/master/acmlab2.cpp', 'acmlab2.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -85,9 +85,9 @@
                     <div id="lab3" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab3/blob/master/acmlab3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab3/master/acmlab3.cpp', 'acmlab3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab3/master/acmlab3.cpp', 'acmlab3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -96,9 +96,9 @@
                     <div id="lab4" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab4/blob/master/acmlab4.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab4/master/acmlab4.cpp', 'acmlab4.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab4/master/acmlab4.cpp', 'acmlab4.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -107,9 +107,9 @@
                     <div id="lab5" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab5/blob/master/acmlab5.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab5/master/acmlab5.cpp', 'acmlab5.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab5/master/acmlab5.cpp', 'acmlab5.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-			<i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентам, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				
+			<i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				
             </div>
         </section>
 
