--- a/acm.html
+++ b/acm.html
@@ -62,10 +62,13 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab1">Лабораторна робота №1</button></h2>
                     <div id="lab1" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab1/blob/master/acmlab1.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab1/master/acmlab1.cpp', 'acmlab1.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
+					   <br>
+                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw10/blob/master/acmhw10.c">Зразок коду для алгоритмів сортування одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw10/master/acmhw10.c', 'acmhw10.c'); return false;">Зразок коду для алгоритмів сортування одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -73,7 +76,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab2">Лабораторна робота №2</button></h2>
                     <div id="lab2" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                              Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                            | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab2/master/acmlab2.cpp', 'acmlab2.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
@@ -84,7 +87,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab3">Лабораторна робота №3</button></h2>
                     <div id="lab3" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab3/blob/master/acmlab3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab3/master/acmlab3.cpp', 'acmlab3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
@@ -95,7 +98,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab4">Лабораторна робота №4</button></h2>
                     <div id="lab4" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab4/blob/master/acmlab4.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab4/master/acmlab4.cpp', 'acmlab4.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
@@ -106,7 +109,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab5">Лабораторна робота №5</button></h2>
                     <div id="lab5" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab5/blob/master/acmlab5.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab5/master/acmlab5.cpp', 'acmlab5.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
@@ -117,7 +120,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab6">Лабораторна робота №6</button></h2>
                     <div id="lab6" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/acmlab6__with_rxcpp_src.cpp', 'cmlab6__with_rxcpp_src.cpp'); return false;">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі)</a></b>
