--- a/acm.html
+++ b/acm.html
@@ -126,10 +126,6 @@
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/acmlab6__with_rxcpp_src.cpp', 'cmlab6__with_rxcpp_src.cpp'); return false;">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab6/tree/master/nonpacked">Зразок коду(відкрити на GitHub теку, що містить файл та бібліотеку ReactiveX)</a>
 						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/nonpacked/acmlab6.cpp', 'acmlab6.cpp'); return false;">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
-					   <br>
-                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(скачати)</a></b>
-                        </div>
                     </div>
                 </div>
 			<i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				
@@ -161,6 +157,9 @@
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract2.pdf">Завдання(скачати)</a></b>
                         </div>
                     </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#prac3">Практичне заняття №3</button></h2>
                     <div id="prac3" class="accordion-collapse collapse" data-bs-parent="#practicalsAccordion">
                         <div class="accordion-body">
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/info/acmInfoForPract3.pdf">Відомості(відкрити на GitHub)</a>
@@ -169,6 +168,9 @@
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract3.pdf">Завдання(скачати)</a></b>
                         </div>
                     </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#prac4">Практичне заняття №4</button></h2>
                     <div id="prac4" class="accordion-collapse collapse" data-bs-parent="#practicalsAccordion">
                         <div class="accordion-body">
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/info/acmInfoForPract4.pdf">Відомості(відкрити на GitHub)</a>
@@ -177,6 +179,9 @@
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract4.pdf">Завдання(скачати)</a></b>
                         </div>
                     </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#prac5">Практичне заняття №5</button></h2>
                     <div id="prac5" class="accordion-collapse collapse" data-bs-parent="#practicalsAccordion">
                         <div class="accordion-body">
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/info/acmInfoForPract5.pdf">Відомості(відкрити на GitHub)</a>
@@ -185,12 +190,18 @@
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract5.pdf">Завдання(скачати)</a></b>
                         </div>
                     </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#prac6">Практичне заняття №6</button></h2>
                     <div id="prac6" class="accordion-collapse collapse" data-bs-parent="#practicalsAccordion">
                         <div class="accordion-body">
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/info/acmInfoForPract6.pdf">Відомості(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/info/acmInfoForPract6.pdf">Відомості(скачати)</a></b>
                                                     | <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/tasks/acmTaskForPract6.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract6.pdf">Завдання(скачати)</a></b>
+					   <br>
+                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
