--- a/acm.html
+++ b/acm.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#labs">Лабораторні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#practicals">Практичні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#practs">Практичні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#tests">Контрольні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#homeworks">Домашні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#lectures">Лекції</a></li>
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section id="practicals" class="mt-4">
+        <section id="practs" class="mt-4">
             <h2>Практичні заняття</h2>
 			<i>Увага! Курс перебуває в стані оновлення, наразі доступні матеріали практичних занять минулих років.</i>
 			<p>
@@ -200,8 +200,8 @@
                                                     | <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/tasks/acmTaskForPract6.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract6.pdf">Завдання(скачати)</a></b>
 					   <br>
-                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга сортування одним файлом*(скачати)</a></b>
+                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга одним файлом*(скачати)</a></b>
                         </div>
                     </div>
                 </div>
