--- a/acm.html
+++ b/acm.html
@@ -55,7 +55,7 @@
 	
         <section id="labs">
             <h2>Лабораторні заняття</h2>
-			<i>Увага! Курс перебуває в стані оновлення, наразі доступні матеріали лабораторних занять минулих років.</i>
+			<i>Наразі доступні матеріали лабораторних занять минулих років.</i>
 			<p>
             <div class="accordion" id="labsAccordion">
                 <div class="accordion-item">
@@ -128,13 +128,13 @@
 						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/nonpacked/acmlab6.cpp', 'acmlab6.cpp'); return false;">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
                     </div>
                 </div>
-			<i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				
+			    <!-- <i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				 -->
             </div>
         </section>
 
         <section id="practs" class="mt-4">
             <h2>Практичні заняття</h2>
-			<i>Увага! Курс перебуває в стані оновлення, наразі доступні матеріали практичних занять минулих років.</i>
+			<i>Наразі доступні матеріали практичних занять минулих років.</i>
 			<p>
             <div class="accordion" id="practicalsAccordion">
                 <div class="accordion-item">
@@ -200,22 +200,8 @@
                                                     | <a href="https://github.com/KozakNazar1/ACM2025/blob/main/practs/tasks/acmTaskForPract6.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/practs/tasks/acmTaskForPract6.pdf">Завдання(скачати)</a></b>
 					   <br>
-                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга одним файлом*(відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга одним файлом*(скачати)</a></b>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="tests" class="mt-4">
-            <h2>Лекційні контрольні роботи</h2>
-            <div class="accordion" id="testsAccordion">
-                <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#test1">Контрольна 1</button></h2>
-                    <div id="test1" class="accordion-collapse collapse" data-bs-parent="#testsAccordion">
-                        <div class="accordion-body">
-                            <a href="#">Опис</a> | <a href="#">Код</a>
+                                 Допоміжні матеріали: <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду для перевірки роботи машини Тюрінга одним файлом(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду для перевірки роботи машини Тюрінга одним файлом(скачати)</a></b>
                         </div>
                     </div>
                 </div>
@@ -224,12 +210,54 @@
 
         <section id="homeworks" class="mt-4">
             <h2>Лекційні домашні завдання</h2>
-            <div class="accordion" id="homeworksAccordion">
+            <div class="accordion" id="lecHomeworksAccordion">
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw1">Домашнє 1</button></h2>
-                    <div id="hw1" class="accordion-collapse collapse" data-bs-parent="#homeworksAccordion">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw1">Лекційне домашнє завдання №1</button></h2>
+                    <div id="hw1" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW1.pdf">Завдання(відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW1.pdf">Завдання(скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw1_m1/blob/master/acmhw1_m1.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m1/blob/master/acmhw1_m1.c', 'acmhw1_m1.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw1_m2/blob/master/acmhw1_m2.c">зразок коду одним файлом* для іншого способу реалізації(відкрити на GitHub)</a>
+					      | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw1_m2/blob/master/acmhw1_m2.c', 'acmhw1_m2.c'); return false;">зразок коду одним файлом* для іншого способу реалізації(скачати)</a>			
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw2">Лекційне домашнє завдання №2</button></h2>
+                    <div id="hw2" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW2.pdf">Завдання(відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW2.pdf">Завдання(скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw2/blob/master/acmhw2.c', 'acmhw2.c'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+		
+        <section id="tests" class="mt-4">
+            <h2>Лекційні контрольні завдання</h2>
+            <div class="accordion" id="lecTasksAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask1">Лекційне контрольне завдання №1</button></h2>
+                    <div id="lecTask1" class="accordion-collapse collapse" data-bs-parent="#lecTasksAccordion">
                         <div class="accordion-body">
-                            <a href="#">Опис</a> | <a href="#">Код</a>
+                        Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/ct/ct/acm2025ExampleForCT1.pdf">Приклад виконання(відкрити на GitHub)</a>
+						      | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/ct/ct/acm2025ExampleForCT1.pdf">Приклад виконання(скачати)</a></b>
+						      | <b>Відомості стосовно завдання розглядаються безпосередньо на лекції, а виконання завдання здійснюється у письмовій формі наприкінці лекції</b>							  
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask2">Лекційне контрольне завдання №2</button></h2>
+                    <div id="lecTask2" class="accordion-collapse collapse" data-bs-parent="#lecTasksAccordion">
+                        <div class="accordion-body">
+                        Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(відкрити на GitHub)</a>
+						      | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(скачати)</a></b>
+						      | <b>Відомості стосовно завдання розглядаються безпосередньо на лекції, а виконання завдання здійснюється у письмовій формі наприкінці лекції</b>							  
                         </div>
                     </div>
                 </div>
@@ -493,8 +521,8 @@
 			
         </section>
 		
-		
-		
+		<br/>
+		<i>*зразки коду створенні одним файлом(що іноді суперечить стилям відповідних парадигм програмуання, таких як ООП) для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування; також більшість написаних таким чином програм(в одному файлі) можна компілювати і запускати на виконання за допомогою ріізних online-середовищ</i>			
 		
 		
     </div>
