--- a/acm.html
+++ b/acm.html
@@ -40,8 +40,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#labs">Лабораторні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#practs">Практичні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#tests">Контрольні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#homeworks">Домашні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#lecTasks">Контрольні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#lecHomeWorks">Домашні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#lectures">Лекції</a></li>
                 </ul>
             </div>
@@ -208,7 +208,7 @@
             </div>
         </section>
 
-        <section id="homeworks" class="mt-4">
+        <section id="lecHomeWorks" class="mt-4">
             <h2>Лекційні домашні завдання</h2>
             <div class="accordion" id="lecHomeworksAccordion">
                 <div class="accordion-item">
@@ -238,7 +238,7 @@
             </div>
         </section>
 		
-        <section id="tests" class="mt-4">
+        <section id="lecTasks" class="mt-4">
             <h2>Лекційні контрольні завдання</h2>
             <div class="accordion" id="lecTasksAccordion">
                 <div class="accordion-item">
