--- a/acm.html
+++ b/acm.html
@@ -40,8 +40,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#labs">Лабораторні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#practs">Практичні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#lecTasks">Контрольні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#lecHomeWorks">Домашні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#lecTasks">Контрольні</a></li>
                     <li class="nav-item"><a class="nav-link" href="#lectures">Лекції</a></li>
                 </ul>
             </div>
@@ -49,6 +49,19 @@
     </nav>
 
     <div class="container mt-4">
+	
+<!--         <section id="update_state">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section> -->
+	
+        <section id="back_section_1">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section>
+	
         <section id="update_state">
             <h2><i>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</i></h2>
         </section>
@@ -522,6 +535,21 @@
         </section>
 		
 		<br/>
+		
+<!--         <section id="update_state">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section> -->
+	
+        <section id="back_section_1">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section>
+		
+		<br/>
+		
 		<i>*зразки коду створенні одним файлом(що іноді суперечить стилям відповідних парадигм програмуання, таких як ООП) для максимальної простоти використання студентами, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування; також більшість написаних таким чином програм(в одному файлі) можна компілювати і запускати на виконання за допомогою ріізних online-середовищ</i>			
 		
 		
