--- a/acm.html
+++ b/acm.html
@@ -6,6 +6,9 @@
     <title>Матеріали курсу АМО</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
+        function goBack() {
+            window.history.back();
+        }
 	    function downloadFile(url, filename) {
         fetch(url)
             .then(response => {
