--- a/acm.html
+++ b/acm.html
@@ -346,6 +346,7 @@
                                     </h2>
                                     <div id="basicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic2.html">Опис</a> | <a href="#">Різне</a></p>	
                                             <div class="accordion" id="basicTopic2Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
